--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,3 +1,10 @@
+* {
+  text-align: center;
+  /* border: 1px red solid */
+}
+h1 {
+  margin-top: 25%;
+}
 
 img { 
   width: 300px;
@@ -14,7 +21,34 @@ img {
 button {
   padding: 3%;
   margin: 3%;
-  background-color: gainsboro;
-  color: red;
   font-weight: bold;
+  height: 70px;
+  width: 100px;
+  border-radius: 50%;
+}
+
+.nope {
+  background-color: red;
+  color: white;
+}
+.add {
+  background-color: white;
+  color: red;
+}
+
+.dogs {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.App .my-adoptions {
+  width: 100%;
+  background-color: lightblue;
+  margin: 5%;
+}
+
+.adoption {
+  margin: 2%;
+  width: 100px;
 }
